@@ -1,3 +1,9 @@
+2006-02-17  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in:
+	* gconf/gconf-value.c: (gconf_value_new), (gconf_value_free),
+	(gconf_entry_new_nocopy), (gconf_entry_unref): Use new g_slice API.
+
 2006-01-28  Benoît Dejean  <benoit@placenet.org>
 
 	* gconf/gconf-schema.c:
